修改介绍文档

--- a/docs/docs/info/mis/business/billing.mdx
+++ b/docs/docs/info/mis/business/billing.mdx
@@ -18,6 +18,7 @@ title: 计费收费
 - 系统的计费收费模型按照集群、分区和QOS进行收费
   - 参考[北大高性能平台收费标准](https://hpc.pku.edu.cn/guide_6.html)设计
 - 系统支持多级计费：平台对租户使用一个统一的收费标准，而租户可以自定义租户内的账户的费用标准
+- 系统支持用户[通过代码自定义收费规则](../../../deploy/config/customization/custom-amount-strategies.md)
 
 ## 计费规则
 
