--- a/apps/mis-web/public/locales/zh_cn/translations.json
+++ b/apps/mis-web/public/locales/zh_cn/translations.json
@@ -42,10 +42,11 @@
       "precision": "精确搜索",
       "cluster": "集群",
       "account": "账户",
+      "cluster-job-id": "集群作业ID",
       "button": {
         "search": "搜索",
         "refresh": "刷新",
-        "changeLimit": "延长所选作业时间限制"
+        "change-limit": "延长所选作业时间限制"
       }
     },
     "job-table": {
@@ -61,7 +62,10 @@
       "time": "运行/排队时间",
       "reason": "说明",
       "limit": "作业时间限制",
-      "others": "更多"
+      "others": "更多",
+      "user": "用户",
+      "details": "详情",
+      "change-limit": "修改作业时限"
     }
   }
 }
